# MCP-Normativa-Arqueol-gica-RUWARK-S.A.C.

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
LEARNING NORMATIVA ARQUEOLOGICA/: batch_convert.py  convert_to_markdown.py  create_agent.py  fix_encoding.py  master_convert.py  test_pmar_generation.py
LEARNING NORMATIVA ARQUEOLOGICA/MARKDOWN/: 208458_rm282.pdf20181203-3039-3ppemu.txt  6302533-rm-000439-2024-mc-anexo-1.txt  DS N° 004-2025-MC.txt  DS_014-92-EM.txt  Guia para la Entrega de Bienes Culturales Muebles-RV N 00171-2020-VMPCIC.pdf.txt  Guía para la expedición del CIRAS.txt  LEY Nº 28296 Ley General del Patrimonio Cultural de la Nación.doc.txt  Lima, 02 de Diciembre de 2004.txt  Normas_Legales_20200808.indd.txt  N° 012-2024-PRODUCE.txt  PEA .txt  Publicacion Oficial - Diario Oficial El Peruano.txt  RESOLUCION DIRECTORAL-001081-2025-DE-DDC-CUS.txt  RIA 2025.txt  RIA_2022_utf8.txt  RVM 063-2021-VMPCIC-MC - ANEXO.pdf.txt  TUPA 2025.txt  facebook_ads_campania.md  reporte_intervenciones_arqueologicas.md
LEARNING NORMATIVA ARQUEOLOGICA/MARKDOWN/Intervenciones/: README.md  TODO.md
LEARNING NORMATIVA ARQUEOLOGICA/agent_specs/: pmar_spec.yaml
LEARNING NORMATIVA ARQUEOLOGICA/agents/: __init__.py  base_agent.py  ciras_agent.py  das_agent.py  otf_agent.py  pea_agent.py  pmar_agent.py
LEARNING NORMATIVA ARQUEOLOGICA/knowledge_base/: README.md
LEARNING NORMATIVA ARQUEOLOGICA/knowledge_base/ciras/: flujo-ciras.md
release-dist/: mcp_normativa_ruwark-2026.3.1-py3-none-any.whl
src/normativa_ruwark/: __init__.py  search.py  server.py
tests/: test_search.py  test_server.py
(+147 files in other folders)
